# ChucK-DMX

./: .gitignore  CMakeLists.txt  DMX-test.ck  DMX.cpp  DMX.sln  DMX.vcxproj  README.md  makefile  makefile.linux  makefile.mac  makefile.win
.github/workflows/: cmake-multi-platform.yml
libartnet/: CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  config.h  config.h.cmake.in  config.h.in  config.status  configure  libartnet.pc  libtool
libartnet/artnet/: Makefile  Makefile.in  artnet.lo  misc.lo  network.c  network.lo  receive.lo  tod.lo  transmit.c  transmit.lo
libartnet/artnet/.deps/: artnet.Plo  misc.Plo  network.Plo  receive.Plo  tod.Plo  transmit.Plo
libartnet/artnet/.libs/: libartnet.la  libartnet.lai
libartnet/autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.2
libartnet/debian/: Makefile  Makefile.in
libartnet/msvc/libartnet/: libartnet.vcxproj
releases/: VERSIONS
sACN/include/etcpal/cpp/: queue.h
sACN/lib/: EtcPal.lib  sACN.lib
sACN/lib/pkgconfig/: EtcPal.pc
scripts/: build-pkg-linux.ck  build-pkg-mac.ck  build-pkg-win.ck  build-pkg.ck  build.ps1  build.sh  gen-dmx.ck
serial/: CMakeLists.txt
serial/cmake/: serial-targets-noconfig.cmake  serial-targets.cmake
serial/include/serial/: serial.h
